make nav section responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <body>
     <nav>
         <section class="max-w-screen-lg mx-auto">
-            <div class="navbar bg-base-100">
+            <!-- navbar for lg sereen -->
+            <div class="navbar hidden lg:flex bg-base-100">
 
                 <!-- nav start -->
                 <div class="navbar-start">
@@ -45,13 +46,55 @@
 
                 <!-- nav center -->
                 <div class="navbar-center">
-                    <a class="bg-secondory font-medium text-sm py-1 px-2 rounded">Sort by view</a>
+                    <a class="bg-secondory font-medium text-sm py-1 px-2 rounded cursor-pointer">Sort by view</a>
                 </div>
 
                 <!-- nav end -->
                 <div class="navbar-end">
                     <button class="bg-primary text-white font-medium text-sm py-1 px-2 rounded">Blog</button>
                 </div>
+
+            </div>
+
+            <!-- navbar for mobail and tablet screen -->
+            <div class="navbar lg:hidden">
+
+                <!-- nav start -->
+                <div class="navbar-start">
+                    <img class="w-32" src="./icons/Logo.png" alt="">
+                </div>
+
+                <!-- nav end -->
+                <div class="navbar-end">
+
+                    <div class="dropdown dropdown-end">
+                        <label class="btn btn-ghost swap swap-rotate">
+
+                            <!-- this hidden checkbox controls the state -->
+                            <input type="checkbox" />
+
+                            <!-- hamburger icon -->
+                            <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                viewBox="0 0 512 512">
+                                <path d="M64,384H448V341.33H64Zm0-106.67H448V234.67H64ZM64,128v42.67H448V128Z" />
+                            </svg>
+
+                            <!-- close icon -->
+                            <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                viewBox="0 0 512 512">
+                                <path d="M64,384H448V341.33H64Zm0-106.67H448V234.67H64ZM64,128v42.67H448V128Z" />
+                            </svg>
+
+                        </label>
+                        <ul tabindex="0"
+                            class="dropdown-content z-[1] menu p-2 bg-secondory rounded w-64 text-md text-white font-medium">
+                            <li><a>Sort by view</a></li>
+                            <li><a>Blog</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+
             </div>
         </section>
     </nav>
