--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
 </head>
 
 <body>
+
     <header>
+
         <nav class="max-w-screen-lg mx-auto">
+
             <!-- navbar for lg sereen -->
             <section class="navbar hidden lg:flex bg-base-100 border-b-2 border-secondory">
 
@@ -46,13 +49,13 @@
 
                 <!-- nav center -->
                 <div class="navbar-center">
-                    <a onclick="handleSortView()"
-                        class="bg-secondory font-medium text-sm py-1 px-2 rounded cursor-pointer">Sort by view</a>
+                    <button onclick="handleSortView()"
+                        class="bg-secondory font-medium text-sm py-1 px-2 rounded cursor-pointer">Sort by view</button>
                 </div>
 
                 <!-- nav end -->
                 <div class="navbar-end">
-                    <button id="blog-btn"
+                    <button onclick="handleBlogs()"
                         class="bg-primary text-white font-medium text-sm py-1 px-2 rounded">Blog</button>
                 </div>
 
@@ -88,19 +91,25 @@
                             </svg>
 
                         </label>
+
                         <ul tabindex="0"
                             class="dropdown-content z-[1] menu p-2 bg-secondory rounded w-64 text-md text-white font-medium">
-                            <li><a>Sort by view</a></li>
-                            <li id="blog-btn2"><a>Blog</a></li>
+                            <li><button onclick="handleSortView()">Sort by view</button></li>
+                            <li><button onclick="handleBlogs()">Blog</button></li>
                         </ul>
+
                     </div>
 
                 </div>
 
             </section>
+
         </nav>
+
     </header>
+
     <main>
+
         <section class="max-w-screen-lg mx-auto">
 
             <section id="tab-container" class="tabs flex justify-center mt-5">
@@ -109,41 +118,23 @@
 
             <section id="card-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-10">
 
-                <!-- <div class="rounded-lg">
-                    <figure><img class="rounded-lg h-52 lg:h-36 w-full" src="https://i.ibb.co/L1b6xSq/shape.jpg"
-                            alt="Shoes" /></figure>
-                    <div class="flex justify-center gap-3 p-3 ">
-
-                        <div>
-                            <img class="h-10 w-10 md:w-12 lg:w-20 rounded-full"
-                                src="https://i.ibb.co/D9wWRM6/olivia.jpg" alt="">
-                        </div>
-
-                        <div>
-                            <h2 class="text-sm font-bold"> Strategy Using the Kano Model</h2>
-                            <div class="flex items-center gap-2">
-                                <p class="text-xs font-normal pt-1"></p>
-                                <img class="w-4 pt-1" src="./icons/blue.png" alt="">
-                            </div>
-                            <p class="text-xs font-normal pt-1"></p>
-                        </div>
-
-                    </div>
-                </div> -->
-
             </section>
 
-            <section id="err" class="hidden">
+            <section id="err" class="hidden h-screen">
                 <div>
-                    <div class="flex justify-center items-center"><img class="mt-20" src="./icons/Icon.png" alt="">
+                    <div class="flex justify-center">
+                        <img class="mt-20" src="./icons/Icon.png" alt="">
                     </div>
                     <p class="text-3xl text-center font-bold mt-4">Oops!! Sorry, There is no <br> content here</p>
                 </div>
             </section>
 
         </section>
+
     </main>
+
     <script src="./js/PHeroTube.js"></script>
+
 </body>
 
 </html>
